--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,11 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
-<p>{{ page.date | date_to_string }} - {{ page.author }}</p>
-
-{{ content }}
+<main>
+    <h1>{{ page.title }}</h1>
+    <p>{{ page.date | date_to_string }} - {{ page.author }}</p>
+    {{ content }}
+    <div>
+        <a href="{{ site.baseurl }}/" class="back-to-home">Back to Home</a>
+    </div>
+</main>
