replaced raw text with google analytics var

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8KHYV9WHEN"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-8KHYV9WHEN');
+      gtag('config', '{{ site.google_analytics }}');
     </script>
     {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
