--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
 
     <header class="page-header" role="banner">
       <!-- <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1> -->
+      <a target="_blank" href="https://shareasale.com/r.cfm?b=1495883&amp;u=4235121&amp;m=69959&amp;urllink=&amp;afftrack="><img src="https://static.shareasale.com/image/69959/Northwest-Ad_728x90.jpg" border="0" /></a>
       <h1 class="project-name">{{ site.title }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
