hides aside banner ad on screens less than 1200px

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -67,3 +67,9 @@ a.back-to-home:hover {
     height: auto;
     display: block;
 }
+
+@media (max-width: 1200px) {
+    .banner-ad {
+        display: none;
+    }
+}
