--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,10 @@
 
 @import "{{ site.theme }}";
 
+img {
+    max-width: 100%;
+}
+
 .page-header {
     background-color: #9b1c31;
     background-image: linear-gradient(120deg, #9b1c31, #4b0063);
