fixed gh link and added id for to top button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
       <!-- end of banner ad -->
 
 
-      <h1 class="project-name">{{ site.title }}</h1>
+      <h1 id="top" class="project-name">{{ site.title }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       <a href="#disclaimers" class="btn">Disclaimer</a>
     </header>
@@ -54,7 +54,7 @@
         <div id="disclaimers">
           <p>Affiliate Disclaimer: This website contains affiliate links. We will earn a commission if you make a purchase through any of the affiliate links.</p>
           <p>Google Analytics Disclaimer: This website uses Google Analytics to help us understand how our readers engage with our content. Google Analytics collects information such as your IP address, browser type, referring/exit pages, and other data. This information helps us improve our blog and create content that serves our audience better.</p>
-          <p>The code to this web page is publicly viewable on my github <a href="https://github.com/j0eybrinkman/felicity.love" target="_blank"></a></p>
+          <p>The code to this web page is publicly viewable on my <a href="https://github.com/j0eybrinkman/felicity.love" target="_blank">github</a></p>
         </div>     
         <a href="#top" class="btn">Back to Top</a>
     </main>
