added back-to-top class and styles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
           <p>Google Analytics Disclaimer: This website uses Google Analytics to help us understand how our readers engage with our content. Google Analytics collects information such as your IP address, browser type, referring/exit pages, and other data. This information helps us improve our blog and create content that serves our audience better.</p>
           <p>The code to this web page is publicly viewable on my <a href="https://github.com/j0eybrinkman/felicity.love" target="_blank">github</a></p>
         </div>     
-        <a href="#top" class="btn">Back to Top</a>
+        <a href="#top" class="back-to-top">Back to Top</a>
     </main>
   </body>
 </html>
