--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,11 +3,43 @@
 
 @import "{{ site.theme }}";
 
-img {
-    max-width: 100%;
+body {
+    font-family: "Amatic SC";
+    font-size: 1.5rem;
+    line-height: 1.2;
 }
 
-.page-header {
+img {
+    max-width: 100%;
+    border: 0;
+}
+
+ul {
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+a.nav-link {
+    text-decoration: none;
+    color: white;
+    font-size: 2rem;
+    padding: 0 .5rem 0 .5rem;
+    font-weight: 700;
+}
+
+main {
+    text-align: center;
+}
+
+main p {
+    font-size: 2rem;
+    color: #000;
+}
+
+.page-header
+{
     background-color: #9b1c31;
     background-image: linear-gradient(120deg, #9b1c31, #4b0063);
 }
@@ -16,6 +48,19 @@ img {
 .main-content h2,
 .main-content h3 {
     color: #202020;
+}
+
+.project-tagline {
+    font-family: "Cedarville Cursive";
+}
+
+h1#top {
+    font-size: 5rem;
+    font-family: "Cedarville Cursive";
+}
+
+.main-content h2 {
+    display: hidden;
 }
 
 a.back-to-home,
@@ -36,17 +81,21 @@ a.back-to-top {
 //     width: 80%;
 // }
 
-@media (min-width: 780px) {
-    p img {
-        width: 20%;
-    }
-}
+// @media (min-width: 780px) {
+//     p img {
+//         width: 20%;
+//     }
+// }
 
-@media (min-width: 430px) {
+// @media (min-width: 430px) {
 
-    p img {
-        width: 50%;
-    }
+//     p img {
+//         width: 50%;
+//     }
+// }
+
+p img {
+    width: 100vw;
 }
 
 @media (max-width: 430px) {
@@ -55,13 +104,48 @@ a.back-to-top {
     }
 }
 
+#sticky-header {
+    position: sticky;
+    top: 0;
+    padding: 10px 16px;
+    text-align: center;
+    vertical-align: center;
+    z-index: 1000;
+    background-image: linear-gradient(120deg, #4b00a3, #9b1c31);
+    background-color: #4b0063;
+}
+
+.date {
+    font-family: "Cedarville Cursive";
+    font-size: 1.5rem;
+    color: #9b1c31;
+}
+
+aside.go-to-top {
+    position: fixed;
+    top: 1%; /* Position halfway down the viewport */
+    transform: translateX(-50%), translateY(-50%); /* Center vertically */
+    background-color: #f8f8f8;
+    padding: 10px;
+    z-index: 1000; /* Ensure it's above other content */
+}
 
 // banner ad
 
-.banner-ad {
+aside.banner-ad.right {
     position: fixed;
     top: 50%; /* Position halfway down the viewport */
-    right: 0;
+    right: 10%;
+    transform: translateY(-50%); /* Center vertically */
+    background-color: #f8f8f8;
+    padding: 10px;
+    z-index: 1000; /* Ensure it's above other content */
+}
+
+aside.banner-ad.left {
+    position: fixed;
+    top: 50%; /* Position halfway down the viewport */
+    left: 10%;
     transform: translateY(-50%); /* Center vertically */
     background-color: #f8f8f8;
     padding: 10px;
@@ -74,7 +158,7 @@ a.back-to-top {
     display: block;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 2080px) {
     .banner-ad {
         display: none;
     }
