added devotional and fixed nav link that takes you to top of page when clicked

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
     {% include head-custom.html %}
   </head>
   <body>
-    <a id="skip-to-content" href="#content">Skip to the content.</a>
+    <span id="top"></span>
     <div id="sticky-header">
       <div>          <!-- banner ad -->
         <a target="_blank" href="https://www.velvetrosestudios.com/"><img src="/img/ads/velvet_rose_studios/velvet_rose_studios_nov_sale.webp" alt=""/></a>
@@ -37,7 +37,7 @@
         <nav>
           <ul>
             <li><a class="nav-link" href="/">Home</a></li>
-            <li><a class="nav-link" href="#header">Top</a></li>
+            <li><a class="nav-link" href="#top">Top</a></li>
             <li><a class="nav-link" href="#disclaimers">Disclaimer</a></li>
         </nav>
       </div>
