--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,7 +25,7 @@ a.nav-link {
     text-decoration: none;
     color: white;
     font-size: 2rem;
-    padding: 0 .5rem 0 .5rem;
+    padding: 0 1rem;
     font-weight: 700;
 }
 
