--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -113,6 +113,7 @@ p img {
     z-index: 1000;
     background-image: linear-gradient(120deg, #4b00a3, #9b1c31);
     background-color: #4b0063;
+    border: 3px solid #4b0063;
 }
 
 .date {
