--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cedarville+Cursive&display=swap" rel="stylesheet">
     <!-- font -->
+     <!-- adsense -->
+     <meta name="google-adsense-account" content="ca-pub-5901945578423494">
     {% include head-custom.html %}
   </head>
   <body>
