--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,9 @@
 ---
 layout: default
 ---
-<main>
+<div>
     <!-- <h1>{{ page.title }}</h1>
     <p>{{ page.date | date_to_string }} - {{ page.author }}</p> -->
     {{ content }}
-    <br>
-    <a href="{{ site.baseurl }}/" class="back-to-home">Back to Home</a>
-</main>
+    <a target="_blank" href="linktr.ee/velvetrosestudios"><img src="/img/ads/velvet_rose_studios/velvet_rose_december2024_ad.webp" alt=""/></a>
+</div>
