--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,5 +5,5 @@ layout: default
     <!-- <h1>{{ page.title }}</h1>
     <p>{{ page.date | date_to_string }} - {{ page.author }}</p> -->
     {{ content }}
-    <a target="_blank" href="linktr.ee/velvetrosestudios"><img src="/img/ads/velvet_rose_studios/velvet_rose_december2024_ad.webp" alt=""/></a>
+    <a onClick="adClick(); return true;" target="_blank" href="linktr.ee/velvetrosestudios"><img src="/img/ads/velvet_rose_studios/velvet_rose_december2024_ad.webp" alt=""/></a>
 </div>
