fixed url for ads

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
      -->
     <div id="sticky-header">
       <div>          <!-- banner ad -->
-        <a onClick="adClick(); return true;" target="_blank" href="linktr.ee/velvetrosestudios"><img src="/img/ads/velvet_rose_studios/velvet_rose_december2024_ad.webp" alt=""/></a>
+        <a onClick="adClick(); return true;" target="_blank" href="https://linktr.ee/velvetrosestudios"><img src="/img/ads/velvet_rose_studios/velvet_rose_december2024_ad.webp" alt=""/></a>
         <!-- end of banner ad --> 
       </div>
         <nav>
@@ -121,7 +121,7 @@
         <p>
           Affiliate Disclaimer: This website contains affiliate links. We will earn a commission if you make a purchase through any of the affiliate links.
         </p>
-        <p>Google Analytics Disclaimer: This website uses Google Analytics to help us understand how our readers engage with our content. Google Analytics collects information such as your IP address, browser type, referring/exit pages, and other data. This information helps us improve our blog and create content that serves our audience better. The code to this web page is publicly viewable on my <a href="https://github.com/j0eybrinkman/felicity.love" onClick="adClick(); return true;" target="_blank">github</a>
+        <p>Google Analytics Disclaimer: This website uses Google Analytics to help us understand how our readers engage with our content. Google Analytics collects information such as your IP address, browser type, referring/exit pages, and other data. This information helps us improve our blog and create content that serves our audience better. The code to this web page is publicly viewable on my <a href="https://github.com/j0eybrinkman/felicity.love" target="_blank">github</a>
         </p>
       </div>     
     </footer>
